# p-m2m-rs

./: Cargo.toml  README.md
pseudo-small-m2m/: Cargo.toml
pseudo-small-m2m/src/: lib.rs
src/: default.rs  lib.rs  smallvec.rs  stdvec.rs
