[package]
name = "pseudo-m2m"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pseudo-small-m2m = { path = "pseudo-small-m2m", optional = true }

[features]
default = []
smallvec = ["pseudo-small-m2m"]

[workspace]
members = ["pseudo-small-m2m"]
